...
  "feedFilterRejected": "Rejected",
  "feedEmptyAll": "No events available",
  "feedEmptyPending": "No events pending approval",
  "feedEmptyApproved": "No approved events",
  "feedEmptyRejected": "No rejected events",
  "feedEventManagement": "Event Management",
  "feedTitle": "Title",
  "feedLocation": "Location",
  "feedSGDate": "SG Date",
  "feedSGExternalLink": "SG External link",
  "feedCreateEvent": "Create an event",
  "feedUseExistingTicketing": "Use an existing ticketing",
  "feedUseExistingTicketingRequiresManageEventsPermission": "The \"Manage ticket events\" permission in MyEmpay is required to use this option.",
...
  "eventActionEventButton": "Reserve",
  "eventActionCampaignValidated": "I voted!",
  "eventActionEventValidated": "I'm coming!",
  "moduleCentralassociation": "Centralassociation",
  "moduleCentralassociationDescription": "Aggregator of association links",
  "adminAccountTypes": "Account types",
  "adminAdd": "Add",
  "adminAddAssociation": "Add association",
  "adminAddedGroup": "Group created",
  "adminAddedLoaner": "Lender added",
  "adminAddedMember": "Member added",
  "adminAddedSchool": "School created",
  "adminAddedStructure": "Structure added",
...
  "adminDeleteGroup": "Delete group?",
  "adminDeleteGroupConfirmation": "Are you sure you want to delete this group?",
  "adminDeleteSchool": "Delete school?",
  "adminDeleteUsers": "Delete users",
  "adminDeleting": "Deleting",
  "adminDeletingError": "Error while deleting",
  "adminDescription": "Description",
  "adminEdit": "Edit",
  "adminEditAssociation": "Edit association : {associationName}",
  "@adminEditAssociation": {
    "description": "Edit association",
    "placeholders": {
      "associationName": {
        "type": "String"
...
  "amapArchivingDelivery": "Archiving delivery",
  "amapCategory": "Category",
  "amapCloseDelivery": "Lock",
  "amapCommandDate": "Order date",
  "amapCommandName": "Order name",
  "amapCommandProducts": "Order products",
  "amapConfirm": "Confirm",
  "amapContact": "Association contacts",
  "amapCreateCategory": "Create category",
  "amapDelete": "Delete",
  "amapDeletedDelivery": "Delivery deleted",
  "amapDeleteDelivery": "Delete delivery?",
  "amapDeleteDeliveryDescription": "Are you sure you want to delete this delivery?",
...
  "phonebookEditAssociationGroupement": "Edit association groupement",
  "phonebookEditAssociationGroups": "Manage groups",
  "phonebookEditAssociationInfo": "Edit",
  "phonebookEditAssociationMembers": "Manage members",
  "phonebookEditMembership": "Edit role",
  "phonebookEditRole": "Edit role",
  "phonebookEmail": "Email:",
  "phonebookEmailCopied": "Email copied to clipboard",
  "phonebookEmptyApparentName": "Please enter a role name",
  "phonebookEmptyFieldError": "A field is not filled",
  "phonebookEmptyKindError": "Please choose an association type",
  "phonebookEmptyMember": "No member selected",
  "phonebookErrorAssociationLoading": "Error loading association",
...
  "raffleWaiting": "Loading",
  "raffleWinnable": "winnable",
  "raffleWinner": "Winner",
  "raffleWinningTickets": "Winning tickets",
  "raffleYourTickets": "All your tickets",
  "recommendationAdd": "Add",
  "recommendationAddedRecommendation": "Deal added",
  "recommendationAddImage": "Please add an image",
  "recommendationAddingError": "Add failed",
  "recommendationCode": "Code",
  "recommendationCopiedCode": "Discount code copied",
  "recommendationDelete": "Delete",
  "recommendationDeletedRecommendation": "Deal deleted",
  "recommendationDeleteRecommendation": "Delete",
  "recommendationDeleteRecommendationConfirmation": "Are you sure you want to delete this deal?",
  "recommendationDeletingRecommendationError": "Error during deletion",
  "recommendationDescription": "Description",
  "recommendationEdit": "Edit",
  "recommendationEditedRecommendation": "Deal updated",
  "recommendationEditingError": "Edit failed",
  "recommendationIncorrectOrMissingFields": "Incorrect or missing fields",
  "recommendationLogo": "Logo",
  "recommendationRecommendation": "Recommendation",
  "recommendationSummary": "Short summary",
  "recommendationTitle": "Title",
  "seedLibraryAdd": "Add",
  "seedLibraryAddedPlant": "Plant added",
  "seedLibraryAddedSpecies": "Species added",
  "seedLibraryAddingError": "Error during addition",
  "seedLibraryAddPlant": "Deposit a plant",
...
  "seedLibraryWriteReference": "Please write the following reference: ",
  "settingsAccount": "Account",
  "settingsAddProfilePicture": "Add a photo",
  "settingsAdmin": "Administrator",
  "settingsAskHelp": "Ask for help",
  "settingsAssociation": "Association",
  "settingsBirthday": "Birthday",
  "settingsBugs": "Bugs",
  "settingsChangePassword": "Change password",
  "settingsChangingPassword": "Do you really want to change your password?",
  "settingsChooseLanguage": "Choose a language",
  "settingsConfirmPassword": "Confirm password",
  "settingsConnexion": "Connection",
...
  "settingsDeleteNotificationLogs": "Delete notification logs?",
  "settingsDeleting": "Deleting",
  "settingsDeletionAsked": "Your account deletion request has been sent to the administrator.",
  "settingsDetelePersonalData": "Delete my personal data",
  "settingsDetelePersonalDataDesc": "This action notifies the administrator that you want to delete your personal data.",
  "settingsEdit": "Edit",
  "settingsEditAccount": "Edit account",
  "settingsEditedAccount": "Account edited",
  "settingsEditPassword": "Edit password",
  "settingsEmail": "Email",
  "settingsEmptyField": "This field cannot be empty",
  "settingsErrorProfilePicture": "Error editing profile picture",
  "settingsErrorSendingDemand": "Error sending request",
  "settingsEvent": "Event",
...
  "settingsOldPassword": "Old password",
  "settingsPasswordChanged": "Password changed",
  "settingsPasswordsNotMatch": "Passwords do not match",
  "settingsPersonalData": "Personal data",
  "settingsPersonalisation": "Personalization",
  "settingsPhone": "Phone",
  "settingsPhoneNumber": "Phone number",
  "settingsProfile": "Profile",
  "settingsProfilePicture": "Profile picture",
  "settingsPromo": "Promotion",
  "settingsRepportBug": "Report a bug",
  "settingsSave": "Save",
  "settingsSecurity": "Security",
  "settingsSendedDemand": "Request sent",
...
